--- a/MkDocs/overrides/main.html
+++ b/MkDocs/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block extrahead %} {{ super() }}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 {% endblock %} {% block footer %} {{ super() }}
 <script>
   $(document).ready(function () {
