--- a/MkDocs/overrides/main.html
+++ b/MkDocs/overrides/main.html
@@ -3,6 +3,7 @@
 <!-- Header -->
 {% block header %}
 <script>
+  // Initialize page animation
   if (!window.pageLoaded) {
     var style = document.createElement("style");
     style.innerHTML =
@@ -33,14 +34,24 @@
   // Initialize ellipsis animation
   if (typeof window.md_ellipsis === "undefined") {
     const $ellipsis = $(".md-header .md-ellipsis").first();
-    const text = "...";
-    let index = 0;
     window.md_ellipsis = $ellipsis.text();
 
+    const text = window.md_ellipsis.replace(" ", "");
+    $ellipsis.text("");
+    var index = 1 % (text.length + 1);
     const interval = setInterval(() => {
       $ellipsis.text(text.substring(0, index));
       index = (index + 1) % (text.length + 1);
     }, 100);
+    // const stages = ["-", "\\", "|", "/"];
+    // let index = 0;
+    // const interval = setInterval(() => {
+    //   if (index >= stages.length) {
+    //     index = 0;
+    //   }
+    //   $ellipsis.text(stages[index]);
+    //   index++;
+    // }, 100);
 
     window.addEventListener("load", () => {
       clearInterval(interval);
