--- a/MkDocs/overrides/main.html
+++ b/MkDocs/overrides/main.html
@@ -8,8 +8,8 @@
     var style = document.createElement("style");
     style.innerHTML =
       ".md-main, .md-tabs { opacity: 0; }\n" +
-      ".md-header__inner > *:not(.md-header__title):not(.md-logo) { display: none; }\n" +
-      ".md-header__title, .md-logo { opacity: .2; }\n" +
+      '.md-header__inner > *:not(.md-header__title):not(.md-logo):not(.md-header__button[for="__drawer"]) { display: none; }\n' +
+      '.md-header__title, .md-logo, .md-header__button[for="__drawer"] { opacity: .2; }\n' +
       ".md-header-bg-frame { transform: translateY(-.3vw); }";
     document.head.appendChild(style);
     window.addEventListener("load", function () {
